# blueprintlm-codex-cli

./: .gitignore  AGENTS.md  BLUEPRINTLM.md  README.md
codex-rs/: Cargo.toml
codex-rs/app-server-protocol/src/protocol/: thread_history.rs
codex-rs/app-server/src/: codex_message_processor.rs  lib.rs
codex-rs/app-server/tests/common/: mcp_process.rs  rollout.rs
codex-rs/app-server/tests/suite/: list_resume.rs
codex-rs/blueprintlm-cli/: Cargo.toml
codex-rs/blueprintlm-cli/src/: main.rs
codex-rs/blueprintlm-cli/tests/: blueprintlm_commands.rs
codex-rs/cli/src/: mcp_cmd.rs
codex-rs/cli/tests/: execpolicy.rs  mcp_add_remove.rs  mcp_list.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/codex-api/src/sse/: chat.rs  responses.rs
codex-rs/codex-client/src/: transport.rs
codex-rs/core/src/: client.rs  client_common.rs  codex.rs  custom_prompts.rs  default_client.rs  lib.rs  project_doc.rs
codex-rs/core/src/auth/: storage.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/src/rollout/: error.rs  (+5 more)
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/mcp-server/src/: codex_tool_config.rs  outgoing_message.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/rmcp-client/src/: find_codex_home.rs  oauth.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  chatwidget.rs  lib.rs  resume_picker.rs
codex-rs/tui2/src/: chatwidget.rs
docs/: advanced.md  agents_md.md  authentication.md  blueprintlm-cli-debug.md  blueprintlm-custom-requirements.md  config.md  prompts.md
(+17 files in other folders)
