[package]
name = "blueprintlm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "blueprintlm"
path = "src/main.rs"

[lib]
name = "codex_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-app-server-protocol = { workspace = true }
codex-arg0 = { workspace = true }
codex-common = { workspace = true, features = ["cli"] }
codex-core = { workspace = true }
codex-backend-client = { workspace = true }
codex-login = { workspace = true }
codex-protocol = { workspace = true }
codex-otel = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
pretty_assertions = { workspace = true }
